--- a/client/stylesheets/shared/_embed.scss
+++ b/client/stylesheets/shared/_embed.scss
@@ -1,6 +1,11 @@
 
 
 .woocommerce-embed-page {
+	#wpbody .woocommerce-layout,
+	.woocommerce-layout__notice-list-hide + .wrap {
+		padding-top: $header-height + 50;
+	}
+
 	#wpcontent,
 	#wpbody-content {
 		overflow-x: initial !important;
@@ -15,7 +20,7 @@
 	}
 
 	.wrap {
-		padding: $header-height 20px 0;
+		padding: 20px 20px 0;
 
 		@include breakpoint( '<782px' ) {
 			p.search-box {
